batch comlete with jpa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.jpa.hibernate.ddl-auto=update
 ﻿spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 spring.batch.initialize-schema=ALWAYS
+
+server.port=8082
